# python_poetry_pacakage_demo

./: README.md
mypackage-demo/: pyproject.toml
mypackage-demo/mypackage_demo/: __init__.py  demo.txt  myfile1.py  version.py
