[tool.poetry]
name = "mypackage-demo"
version = "0.2.0"
description = ""
authors = ["Camilla Gaardsted <camilla.gaardsted@gmail.com>"]
readme = "README.md"
include = [
    { path = "tests", format = "sdist" },
    { path = "demo.ps1", format = ["sdist", "wheel"] },
    { path = "*.txt", format = ["sdist", "wheel"] }
]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
